Modified architecture (#11)
