# docs/swagger.yaml
@@ -7,6 +7,13 @@ definitions:
       status:
         type: boolean
     type: object
+  models.Login:
+    properties:
+      emailId:
+        type: string
+      password:
+        type: string
+    type: object
   models.SignUp:
     properties:
       emailId:
@@ -21,6 +28,24 @@ definitions:
 info:
   contact: {}
 paths:
+  /v1/auth/login:
+    post:
+      description: API for user login
+      parameters:
+      - description: Login Payload
+        in: body
+        name: body
+        required: true
+        schema:
+          $ref: '#/definitions/models.Login'
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/apihelpers.APIRes'
+      summary: User Login
+      tags:
+      - Auth
   /v1/auth/send-email-otp:
     get:
       description: API for sending otp by email
